kube-tools/argocd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.mission.arctiq.codegameeat.com`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argo.mission.arctiq.codegameeat.com`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: le
